--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doc</title>
+    <title>Frontend Development</title>
 </head>
 <body>
-    <p>WE are lerning Git and Github</p>
+    <p>WE are lerning Git and Github </p>
+    <p>
+        command
+    </p>
 </body>
 </html>
